Exercise 3 gets updated

--- a/gapminder.html
+++ b/gapminder.html
@@ -348,6 +348,10 @@ $(document).ready(function () {
 <div id="exercise-3" class="section level3">
 <h3>Exercise 3</h3>
 <p>Add year 1967 in another color.</p>
+<pre class="r"><code>eu_5267 &lt;- gap %&gt;% 
+   filter(continent == &quot;Europe&quot;, year== c(1952: 1967))</code></pre>
+<pre><code>## Warning in year == c(1952:1967): longer object length is not a multiple of
+## shorter object length</code></pre>
 </div>
 </div>
 
